objects/LLC_BI__Spread_Record_Classification__c.object
<CustomObject>
    <description>This is the junction object between Spread Statement Records and Classifications.</description>
    <fields>
        <fullName>LLC_BI__Classification__c</fullName>
        <description>Classification of the Spread Statement Record.</description>
        <inlineHelpText>Classification of the Spread Statement Record.</inlineHelpText>
        <label>Classification</label>
        <referenceTo>LLC_BI__Classification__c</referenceTo>
        <relationshipLabel>Spread Record Classifications</relationshipLabel>
        <relationshipName>Spread_Record_Classifications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Spread_Statement_Record__c</fullName>
        <description>The Spread Statement Record that is being classified.</description>
        <inlineHelpText>The Spread Statement Record that is being classified.</inlineHelpText>
        <label>Spread Statement Record</label>
        <referenceTo>LLC_BI__Spread_Statement_Record__c</referenceTo>
        <relationshipLabel>Spread Record Classifications</relationshipLabel>
        <relationshipName>Spread_Record_Classifications</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>The field is optional. If populated the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.htm</description>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Spread Record Classification</label>
    <nameField>
        <label>Spread Record Classification Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Spread Record Classifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>